Fix:  fixed error where parameter names where merging with the input box on small screens. Added 'View' and 'Delete' setup functionality. Added 'Rate Setup' option, but not yet functioning correctly.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -447,6 +447,9 @@ label {
         text-align: center;
         font-size: larger;
     }
+    .param-input {
+        padding-top: 30px !important;  /* Note: '!important' only used on this occasion as was necessary to override a Materialize '!important' rule. */
+    }
 }
 
 @media (max-width: 325px) {
@@ -457,3 +460,11 @@ label {
         margin: 2px;
     }
 }
+
+@media (max-width: 450px) {
+    #my-setups-small-screen .btn-small {
+        float: left;
+    }
+    .input-field .validate {
+        padding-top: 40px;
+}}
